# banana-image-mcp

./: .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
assets/: README.md
banana_image_mcp/: __init__.py
banana_image_mcp/config/: settings.py
banana_image_mcp/core/: exceptions.py
banana_image_mcp/resources/: template_catalog.py
banana_image_mcp/services/: __init__.py  base_image_service.py  enhanced_image_service.py  flash_image_service.py  gemini_client.py  model_selector.py  pro_image_service.py
banana_image_mcp/tools/: generate_image.py  upload_file.py
banana_image_mcp/utils/: image_utils.py  validation_utils.py
docs/: OPTIMIZATION_PLAN.md
nanobanana_mcp_server/: __init__.py
nanobanana_mcp_server/core/: validation.py
nanobanana_mcp_server/resources/: template_catalog.py
nanobanana_mcp_server/services/: base_image_service.py  file_image_service.py  image_database_service.py  image_storage_service.py  pro_image_service.py  template_service.py
nanobanana_mcp_server/tools/: maintenance.py
nanobanana_mcp_server/utils/: validation_utils.py
scripts/: build.py  upload.py
tests/: conftest.py  test_aspect_ratio.py
tests/integration/: __init__.py  test_generate_image_tool.py
tests/unit/: __init__.py  test_base_image_service.py  test_config.py  test_exceptions.py  test_flash_image_service.py  test_generate_image_helpers.py  test_model_selector.py  test_pro_image_service.py
